# spindle

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  artifact.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: .nojekyll  bundle.md  evaluation.html  guide.html  how-it-works.html  index.html  llms.txt  rationale.html  skill-evaluations.md  style.css
docs/lib/artoo-kit/: article.css  base.css  components.css  kit.js  tokens.css
examples/evaluation-sample/: eval.toml  runner.py
examples/evaluation-sample/fixtures/: held-repro.json  visible-repro.json
examples/evaluation-sample/skill/: SKILL.md
examples/outcome-uat/: README.md  eval.toml  runner.py
examples/outcome-uat/fixtures/: aggregate-destination-overclaim.json  aggregate-destination-repaired.json  backfilled-role-as-eliminated.json  critic-overreach.json  critic-self-review-noop-repair.json  direct-record-jump.json  (+12 more)
examples/spindle-sample/distributions/spindle-sample/: preempt.md  pyproject.toml
examples/spindle-sample/distributions/spindle-sample/spindle_sample_dist/: __init__.py
src/spindle/: __init__.py  active.py  advance.py  appclass.py  binder.py  binding.py  broker.py  capabilities.py  channels.py  chippability.py  cli.py  composition.py  dialectic.py  distributions.py  doctrine.py  evaluation.py  fleet.py  gates.py  ingest.py  ledger.py  liaison.py  llm.py  materialize.py  models.py  optimize.py  packages.py  paths.py  peers.py  preempt.py  profiles.py  rate.py  render.py  resolver.py  roster.py  scaffold.py  scout.py  scout_results.py  skills.py  verdicts.py
tests/: test_active.py  test_advance.py  test_appclass.py  test_binder.py  test_binding.py  test_broker.py  test_capabilities.py  test_channels.py  test_chip_field.py  test_chippability.py  test_cli_capabilities.py  test_cli_chippability.py  test_cli_dist.py  test_cli_dist_install.py  test_cli_packages.py  test_cli_project_rewrite.py  test_cli_skills.py  test_cli_state.py  test_composition.py  test_dialectic.py  test_distributions.py  test_doctrine.py  test_e2e_active_dist.py  test_evaluation.py  test_fleet.py  test_gates.py  test_ingest.py  test_ledger.py  test_ledger_hooks.py  test_legacy_shim.py  test_liaison.py  test_llm.py  test_materialize.py  test_migration.py  test_model_axis.py  test_optimize.py  test_outcome_uat_example.py  test_packages.py  test_paths.py  test_peers.py  (+13 more)
(+11 files in other folders)
