[project]
name = "spindle"
version = "0.1.0"
description = "Spindle composes source skills into surface-specific blends"
authors = [
    { name = "Marc Lavallee", email = "mlavallee@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "skills", "agents", "composition", "package-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
]
dependencies = [
    "tomli >= 2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/lavallee/spindle"
Repository = "https://github.com/lavallee/spindle.git"
Documentation = "https://github.com/lavallee/spindle#readme"
Issues = "https://github.com/lavallee/spindle/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "sample-planning",
    "spindle-sample",
]

[tool.uv.sources]
sample-planning = { path = "examples/spindle-sample/packages/sample-planning", editable = true }
spindle-sample = { path = "examples/spindle-sample/distributions/spindle-sample", editable = true }

[project.scripts]
spindle = "spindle.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spindle"]
